--- a/CSS/content.css
+++ b/CSS/content.css
@@ -129,6 +129,9 @@
   padding: 0px 8px;
   margin-right: 10px;
 }
+.tags dt a:hover{
+  background: #46811d;
+}
 /* 主体part2 */
 .cp_header_con .info2 ul{
   display: block;
@@ -454,4 +457,253 @@
   position: relative;
   padding: 10px 20px 10px 0px;
   font-size: 16px;
+}
+/* 菜谱小轮播图 */
+.cp_body .measure .measure_con .cp_banner{
+  width: 660px;
+  height: 366px;
+  margin: 20px 130px 20px 200px;
+  overflow: hidden;
+  position: relative;
+}
+.cp_body .measure .measure_con .cp_banner img{
+  width: 660px;
+  height: 366px;
+  display: none;
+}
+.cp_body .measure .measure_con .cp_banner img:first-child{
+  display: block;
+}
+.cp_body .measure .measure_con .cp_banner ul.cp_banner_index{
+  position: absolute;
+  bottom: 30px;
+  left: 300px;
+}
+.cp_body .measure .measure_con .cp_banner ul.cp_banner_index li{
+  float: left;
+  height: 10px;
+  width: 10px;
+  background: #eee;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.cp_body .measure .measure_con .cp_banner ul.cp_banner_index li:not(:last-child){
+  margin-right: 10px;
+}
+.cp_body .measure .measure_con .cp_banner ul.cp_banner_index li:first-child{
+  background: #e90808;
+}
+/* 烹饪技巧 */
+.cp_body .measure .measure_con p.cp_skill{
+  padding-left: 200px;
+}
+/* 讨论 */
+.cp_body .cp_comment{
+  background: #fff;
+  margin-bottom: 20px;
+  width: 990px;
+}
+.cp_comment_con{
+  width: 990px;
+  padding: 20px 0px;
+}
+/* 用户评论区 */
+.cp_com_form{
+  width: 930px;
+  padding: 0px 30px;
+}
+.cp_com_form a.user_avatar{
+  width: 80px; height: 80px;
+  float: left;
+}
+.cp_com_form a.user_avatar img{
+  display: block;
+  width: 80px; height: 80px;
+}
+.cp_com_form .form_con{
+  float: left;
+  display: block;
+  height: 280px;
+  width: 820px;
+  position: relative;
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
+.cp_com_form .form_con .form_tag{
+  height: 34px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.cp_com_form .form_con .form_tag em{
+  height: 34px;
+  font-size: 20px;
+  line-height: 34px;
+  color: #666;
+  display: inline-block;
+  vertical-align: top;
+}
+.cp_com_form .form_con .form_tag span{
+  height: 34px;
+  font-size: 20px;
+  line-height: 34px;
+  color: #999;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 15px;
+  padding: 0px 10px;
+  background: #eee;
+  border-radius: 2px;
+  cursor: pointer;
+}
+.cp_com_form .form_con .form_tag span:hover{
+  background: #ddd;
+}
+.cp_com_form .form_con .form_tag span.current{
+  background: #ff3232;
+  color: #fff;
+}
+.cp_com_form .form_con form textarea{
+  width: 790px;
+  height: 150px;
+  padding: 14px;
+  border: 1px solid #ddd;
+  background: #fcfcfc;
+  font-size: 16px;
+}
+.cp_com_form .form_con form input.submit{
+  box-sizing: content-box;
+  height: 40px;width: 80px;
+  background: #ff3232;
+  border: 1px solid #e90808;
+  color: #fff;
+  font-size: 18px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.cp_com_form .form_con form input.submit:hover{
+  background: #e90808;
+  cursor: pointer;
+}
+.cp_com_form .form_con a.cp_upload{
+  display: block;
+  height: 40px; width: 140px;
+  line-height: 40px;
+  font-size: 18px;
+  color:#fff;
+  background: #ff3232;
+  text-align: center;
+  border: 1px solid #e90808;
+  position: absolute;
+  bottom: 0;
+}
+.cp_com_form .form_con a.cp_upload:hover{
+  background: #e90808;
+}
+/* 排序区 */
+.cp_com_list{
+  height: 34px;
+  line-height: 34px;
+  position: relative;
+  border-bottom: 1px solid #eee;
+  color: #666;
+  padding-bottom: 10px;
+  margin: 0 20px;
+  font-size: 18px;
+}
+.cp_com_list span{
+  padding: 3px 10px;
+  background: #eee;
+  cursor: pointer;
+  color: #999;
+  margin-right: 10px;
+  border-radius: 2px;
+}
+.cp_com_list span:hover{
+  background: #ddd;
+}
+.cp_com_list span.current{
+  background: #ff3232;
+  color: #fff;
+  cursor: default;
+}
+/* 讨论区 */
+.new_com{
+  width: 930px;
+  padding: 30px 30px 0px;
+}
+.new_com ul li.com_li{
+  padding-top: 20px;
+  border-bottom: 1px solid #eee;
+}
+.new_com ul li.com_li a.avatar{
+  float: left;
+  width: 80px;
+  height: 112px;
+}
+.new_com ul li a.avatar img{
+  width: 80px;
+}
+.new_com ul li a.avatar h5{
+  height: 32px;
+  color: #999;
+  white-space: nowrap;
+  overflow: hidden;
+  line-height: 32px;
+  text-align: center;
+}
+.new_com ul li div.c{
+  float: left;
+  width: 810px;
+  margin-left: 40px;
+}
+.new_com ul li div.c p{
+  font-size: 20px;
+  color:#666;
+  line-height: 34px;
+}
+.new_com ul li div.c p strong{
+  color: #ff3232;
+  padding-right: 20px;
+}
+.new_com ul li div.info{
+  position: relative;
+  height: 40px;
+  line-height: 40px;
+  color: #999;
+  font-size: 18px;
+}
+.new_com ul li div.info span>a{
+  color:#ff3232;
+  padding-left: 8px;
+}
+.new_com ul li div.info span>a:hover{
+  text-decoration: underline;
+}
+.new_com ul li div.info>a{
+  float: right;
+  color:#999;
+}
+.new_com ul li div.info>a:hover{
+  color:#ff3232;
+}
+.new_com ul li div.info span.zan{
+  float: right;
+  cursor: pointer;
+  padding-right: 10px;
+}
+.new_com ul li div.info span.zan:hover em{
+  background-position: 0px -18px;
+}
+.new_com ul li div.info span.zan:hover{
+  color: #ff3232;
+}
+.new_com ul li div.info span.zan em{
+  display: inline-block;
+  vertical-align: top;
+  width: 18px;
+  height: 18px;
+  background: url(../images/content/con_com_zan_icon.png) 0px 0px no-repeat;
+  background-size: 100%;
+  margin-top: 9px;
 }
