--- a/CSS/header.css
+++ b/CSS/header.css
@@ -205,3 +205,27 @@
   bottom:-30px;
   height:208px;width:325px;
 }
+/* 回到顶部按钮 */
+.back_to_top{
+  height: 178px;
+  width: 48px;
+  position: fixed;
+  display: block;
+  bottom: 20px;
+  left: 1204px;
+  right:6px;
+  text-indent: -9999px;
+  z-index:300;
+}
+.back_to_top .toTop{
+  height: 48px;
+  width: 48px;
+  background: url(../images/header/backtotop_icon.png) no-repeat 0px 0px;
+  position: absolute;
+  right:0;
+  bottom:0;
+  z-index:300;
+}
+.back_to_top .toTop:hover{
+  background-position: 0px -48px;
+}
