--- a/CSS/header.css
+++ b/CSS/header.css
@@ -207,24 +207,26 @@
 }
 /* 回到顶部按钮 */
 .back_to_top{
+  display: none;
   height: 178px;
   width: 48px;
   position: fixed;
-  display: block;
-  bottom: 20px;
-  left: 1204px;
+  bottom:20px;
   right:6px;
+  left: 1448px;
   text-indent: -9999px;
-  z-index:300;
+  z-index:500;
+  /* transition: all .5s linear; */
 }
 .back_to_top .toTop{
   height: 48px;
   width: 48px;
+  text-indent: -9999px;
   background: url(../images/header/backtotop_icon.png) no-repeat 0px 0px;
   position: absolute;
   right:0;
   bottom:0;
-  z-index:300;
+  z-index:600;
 }
 .back_to_top .toTop:hover{
   background-position: 0px -48px;
